[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/ItemSlot.gd" type="Script" id=1]
[ext_resource path="res://Assets/2D/ui/general_ui/item_frame_variant_2.png" type="Texture" id=2]

[node name="ItemButton" type="TextureButton"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ItemIcon" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )

[node name="Amount" type="Label" parent="."]
margin_top = 18.0
margin_right = 16.0
margin_bottom = 34.0
rect_min_size = Vector2( 16, 16 )
rect_scale = Vector2( 0.5, 0.5 )
text = "99"

[connection signal="mouse_entered" from="." to="." method="_on_ItemButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ItemButton_pressed"]
